hard-gists/7079332cab038da1394d/run.log
=== Docker Run Log for 7079332cab038da1394d ===
Started at: Mi 29. Okt 16:58:48 CET 2025

[2025-10-29 16:58:49] START: Running container for 7079332cab038da1394d
[2025-10-29 16:58:49] SUCCESS: Container 30a0d6c0ad5671f8ffa6dde7e03a7a7534f8e7f682c3e90c5308e5b50bc600f6 started for 7079332cab038da1394d
=== Container logs for 7079332cab038da1394d ===
  File "/snippet.py", line 30
    print create_token('secret_api_key')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7079332cab038da1394d ===
[2025-10-29 16:58:51] INFO: Container 30a0d6c0ad5671f8ffa6dde7e03a7a7534f8e7f682c3e90c5308e5b50bc600f6 has stopped
